# jackal

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  jackal.sln  Найденные ошибки.txt
.github/workflows/: build.yaml
assets/: CMakeLists.txt
src/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  jackal.vcxproj  jackal.vcxproj.filters  main.cpp
src/client/: CMakeLists.txt  app.cpp  app.hpp  basic_geometry.hpp  client_game.cpp  client_game.hpp  config.cpp  config.hpp  exceptions.cpp  exceptions.hpp  field.cpp  field.hpp  fs.cpp  fs.hpp  geometry.cpp  geometry.hpp  gui.cpp  gui.hpp  gui_element.hpp  jackal.json  jackal.yaml  log.cpp  log.hpp  main.cpp  resources.cpp  resources.hpp  sdl.cpp  sdl.hpp  sdl_wrapper.cpp  sdl_wrapper.hpp  singleton.hpp  timer.cpp  timer.hpp  universal_game.cpp  universal_game.hpp  view.cpp  view.hpp  window.cpp  window.hpp
src/client-server-api/: CMakeLists.txt  api.proto  client-server-api.cpp  server.proto
src/client-server-api/include/: client-server-api.hpp
src/core/: CMakeLists.txt  Cell.cpp  Cell.h  ChangeMap.cpp  ChangeMap.h  GameState.cpp  GameState.h  JackalCoreCB.cbp  JackalCoreCB.depend  JackalCoreCB.layout  JackalGame.cpp  JackalGame.h  Pirate.h  Point.cpp  Point.h  ResponseType.h  TimeState.cpp  TimeState.h  main.cpp
src/data/: CMakeLists.txt  schema.fbs
src/pack/: CMakeLists.txt  main.cpp
src/sdl/: CMakeLists.txt  sdl.cpp
src/sdl/include/: sdl.hpp
src/server/: CMakeLists.txt  server.cpp  server.proto
src/x/: CMakeLists.txt  exceptions.cpp  fs.cpp  mmap.cpp
src/x/include/: x.hpp
src/x/include/x/: exceptions.hpp
